<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="search">Search</string>
    <string name="search_hint">Enter a name</string>
    <string name="app_name">Wheaton College</string>
    <string name="contact_label">Contact Us</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Previous</string>
    <string name="today_button">Today</string>
    <string name="about_title">About</string>
    <string name="about_text">This app was made for you by Drew Hannay, Alisa Maas, and Andrew Wolfe, with graphics
    designed by Jacob Meindertsma. If you have any trouble with the app, or suggestions for improving it, fill out our 
    Contact Form by pressing the menu button on the home screen of the app.  If all is going wonderfully for you 
    (as it should, with all the work we put into this), then maybe you should thank us. Our CPO numbers are 1122, 2122, 
    3175, and 2263, respectively.  So if you suddenly find yourself in the mood for writing personal notes, keep us in mind.
    (We also accept candy…yum…)</string>
    <string name="connect_to_wheaton">You must be connected to the Wheaton College Wifi Network to use this feature</string>
    <string name="send_mail">Send mail…</string>
    <string name="no_email_clients">No email clients installed</string>
    <string name="clear_cache">Clear Cached Data</string>
    <string name="academic_calendar">Academic Calendar</string>
    <string name="admissions">Admissions</string>
    <string name="arena_theater">Arena Theater</string>
    <string name="athletics">Athletics</string>
    <string name="bookstore">Bookstore</string>
    <string name="chapel_schedule">Chapel Schedule</string>
    <string name="conservatory">Conservatory</string>
    <string name="counseling_center">Counseling Center</string>
    <string name="course_schedules">Course Schedules</string>
    <string name="events_calendar">Events Calendar</string>
    <string name="general_education_requirements">General Education Requirements</string>
    <string name="honeyrock">HoneyRock</string>
    <string name="housing_calendar">Housing Calendar</string>
    <string name="library">Library</string>
    <string name="long_term_calendar">Long Term Calendar</string>
    <string name="metra_schedule">Metra Schedule</string>
    <string name="my_wheaton_portal">My Wheaton Portal</string>
    <string name="registrar_s_catalog">Registrar\'s Catalog</string>
    <string name="wetn">WETN</string>
    <string name="close_balloon">Close Balloon</string>
    <string name="balloon_disclosure">Balloon Disclosure</string>
    <string name="section_title">Section Title</string>
    <string name="whos_who_header">Who\'s Who Header</string>
    <string name="whos_who_button">Who\'s Who Button</string>
    <string name="chapel_button">Chapel Button</string>
    <string name="open_floor_button">Open Floor Button</string>
    <string name="menu_button">Menu Button</string>
    <string name="about_button">About Button</string>
    <string name="map_button">Map Button</string>
    <string name="links_button">Links Button</string>
    <string name="whos_who_picture">Who\'s Who Picture</string>
</resources>
